Review fixes: - Fix error message of pledgeGoal - Fix width of pledgeGoal (only apply the width to the input field, and not to the whole div, letting the label to not wrap) - Make the project name in tabbar semibold - Fix computation of top padding of navbar menu items

--- a/crowdsource-frontend/src/main/scss/_settings.scss
+++ b/crowdsource-frontend/src/main/scss/_settings.scss
@@ -10,6 +10,6 @@ $crowd-color-darker-grey: #575757;
 $crowd-color-dark-grey: #6b6b6b;
 $crowd-color-light-grey: #e6e6e6;
 
-$crowd-line-height: 10.5px;
+$crowd-line-height: 20.8px;
 
 @import "foundation/_foundation-settings";
