--- a/crowdsource-frontend/src/main/scss/components/project.scss
+++ b/crowdsource-frontend/src/main/scss/components/project.scss
@@ -4,7 +4,7 @@
         height: rem-calc(100);
     }
 
-    .form-controls-pledge-goal {
+    .form-controls-pledge-goal .table {
         width: rem-calc(150);
     }
 
